--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="text-slide">la boom la la ka ka</div>
+    <div id="text-slide">la boom la la mama</div>
 </body>
 </html>
